# A.T.L.A.S

./: .gitignore  ATLAS_Bug_Report.md  OPENWAKEWORD_MIGRATION.md  Readme.md  atlas.cmd  classifier.py  config.json  context_pruner.py  downloadmodels.py  executor.py  history.py  killswitch.py  llm_engine.py  macros.py  main.py  memory.py  openwakeword_migration_selftest.py  pc_control.py  phase2_selftest.py  pyproject.toml  requirements.txt  rollback.py  security.py  settings.py  test.py  test_audio.py  test_voice_integration.py  test_wake_tuning.py  validator.py  verifier.py  voice.py  wake_word.py
.github/: copilot-instructions.md
.github/prompts/: bugfix2.prompt.md  bugfix3.prompt.md  bugfix4.prompt.md  bugfix_final.prompt.md  fix_audio.prompt.md  phase1.prompt.md  phase2.prompt.md  phase3.prompt.md  phase4.prompt.md  v2phase1.prompt.md  v2phase2.prompt.md  v2phase3.prompt.md  v2phase4.prompt.md  vosk_migration.prompt.md
api/: __init__.py  server.py  ws_manager.py
hud/: package-lock.json  package.json
hud/src/: App.css  App.tsx  types.ts
hud/src-tauri/: Cargo.toml  tauri.conf.json
hud/src-tauri/src/: lib.rs  main.rs
hud/src/components/: AvatarPanel.tsx  ChatPanel.tsx  DryRunModal.tsx  HistoryDrawer.tsx  SettingsModal.tsx  StatusPanel.tsx
