[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
dependencies = [
	"psutil>=5.9",
	"pyperclip>=1.8",
]

[project.scripts]
atlas = "main:main"

[tool.setuptools]
py-modules = [
	"main",
	"classifier",
	"context_pruner",
	"executor",
	"history",
	"killswitch",
	"llm_engine",
	"macros",
	"memory",
	"pc_control",
	"rollback",
	"security",
	"settings",
	"validator",
	"verifier",
	"voice",
	"wake_word"
]

[tool.setuptools.packages.find]
include = ["api*"]
